--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(vguard-test)
 add_subdirectory(loop-street)
 add_subdirectory(multiple-rsu-street)
 add_subdirectory(multiple-rsu-street-congestion)
+add_subdirectory(multiple-rsu-single-street-congestion)
 
 if(WITH_ENVMOD)
     add_subdirectory(rsu_grid)
